<resources>
    <string name="app_name">Summit_Properties</string>
    <string name="txt_firstName">Firstname</string>
    <string name="txt_surname">Lastname</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email">Email</string>
    <string name="txt_unitname">Unit Name</string>
    <string name="txt_unitNumber">Unit Number</string>
    <string name="txt_password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="btn_register">Register</string>
    <string name="btnLoginPage">LOGIN</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_heading">Summit Properties</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_headingCommunityInfo">Community Info</string>
    <string name="txt_headingPropertyManagement">Property Management</string>
    <string name="txt_headingCommunityManagement">Community Management</string>
    <string name="txt_headingContractedServiceProviders">Contracted Service Providers</string>
    <string name="txt_headingImportantContacts">Important Contacts</string>
    <string name="txt_headingSummitProperties">Summit Properties</string>
    <string name="txt_headingSummitProperties1">Summit Properties</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>