<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_headingCommunityInfo"
                android:layout_width="412dp"
                android:layout_height="40dp"
                android:background="@color/lightGrey"
                android:gravity="center"
                android:text="@string/txt_headingCommunityInfo"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_headingPropertyManagement"
                android:layout_width="412dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightGrey"
                android:gravity="center"
                android:text="@string/txt_headingPropertyManagement"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_headingCommunityManagement"
                android:layout_width="412dp"
                android:layout_height="40dp"
                android:layout_marginTop="288dp"
                android:background="@color/lightGrey"
                android:gravity="center"
                android:text="@string/txt_headingCommunityManagement"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_headingImportantContacts"
                android:layout_width="412dp"
                android:layout_height="40dp"
                android:layout_marginTop="576dp"
                android:background="@color/lightGrey"
                android:gravity="center"
                android:text="@string/txt_headingImportantContacts"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>