<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="367dp"
        android:layout_height="127dp"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/summit_properties_logo" />

    <View
        android:id="@+id/txt_register"
        android:layout_width="210dp"
        android:layout_height="480dp"
        android:background="@drawable/pnl_backgroud_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_register">

        <Button
            android:id="@+id/btnRegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_black_boarder"
            android:onClick="goToRegisterPage"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="259dp"
            android:background="@drawable/btn_black_boarder"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/btnLoginPage"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:height="48dp"
                    android:drawableStart="@drawable/icon_email"
                    android:drawablePadding="6dp"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:drawableStart="@drawable/icon_lock"
                    android:drawablePadding="6dp"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_solid_black_boarder"
        android:onClick="goToHomePage"
        android:paddingTop="3dp"
        android:text="@string/txt_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>